# engine

./: CMakeLists.txt
src/: main.c
src/core/: engine.c  engine.h
src/platform/: platform.c  platform.h
